# ontolith

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
adr/: 0000-template.md  0001-rocksdb-storage-backend.md  0002-cluster-mvp-in-process.md  0003-management-plane-security-minimum.md
crates/ontolith-cluster/: Cargo.toml
crates/ontolith-cluster/src/: lib.rs
crates/ontolith-compliance/: Cargo.toml
crates/ontolith-compliance/src/: lib.rs
crates/ontolith-compliance/tests/: sparql_r1_smoke.rs  sparql_w3c_subset.rs
crates/ontolith-compliance/tests/w3c/: README.md
crates/ontolith-compliance/tests/w3c/data/: basic.nt  basic.ttl
crates/ontolith-compliance/tests/w3c/queries/: aggregate_count_star.rq  aggregate_gap.rq  ask_basic.rq  ask_negative.rq  bind_bound.rq  construct_basic.rq  distinct_order_limit.rq  distinct_order_limit_offset.rq  filter_bound.rq  join_fixed_subject.rq  optional_basic.rq  prefix_ask_turtle.rq  property_path_alternative.rq  property_path_inverse.rq  property_path_plus.rq  property_path_plus_bob.rq  property_path_star.rq  property_path_star_bob.rq  property_path_unsupported.rq  select_basic.rq  subquery_gap.rq  union_basic.rq  update_unsupported.ru  values_basic.rq  values_tuple.rq
crates/ontolith-core/: Cargo.toml
crates/ontolith-core/src/: error.rs  lib.rs
crates/ontolith-observability/: Cargo.toml
crates/ontolith-observability/src/: lib.rs
crates/ontolith-observability/src/application/: mod.rs
crates/ontolith-observability/src/domain/: mod.rs
crates/ontolith-observability/src/infrastructure/: mod.rs
crates/ontolith-parser/: Cargo.toml
crates/ontolith-parser/src/: lib.rs
crates/ontolith-plugin-api/: Cargo.toml
crates/ontolith-plugin-api/src/: lib.rs
crates/ontolith-query/: Cargo.toml
crates/ontolith-query/src/: lib.rs
crates/ontolith-rdf/: Cargo.toml
crates/ontolith-rdf/src/: lib.rs
crates/ontolith-reasoner/: Cargo.toml
crates/ontolith-sdk/: Cargo.toml
crates/ontolith-security/: Cargo.toml
crates/ontolith-server/: Cargo.toml
crates/ontolith-server/src/: app.rs  http.rs  lib.rs  main.rs  management.rs
crates/ontolith-server/src/api/: mod.rs
crates/ontolith-server/src/bootstrap/: mod.rs
crates/ontolith-server/src/runtime/: mod.rs
crates/ontolith-storage/: Cargo.toml
crates/ontolith-storage/src/: lib.rs
crates/ontolith-storage/src/application/: mod.rs
crates/ontolith-storage/src/domain/: encoding.rs  mod.rs
crates/ontolith-storage/src/infrastructure/: codec.rs  indexes.rs  mod.rs  rocks.rs
crates/ontolith-transaction/: Cargo.toml
deployments/: ontolith-management-server.service  ontolith-management.env  ontolith-management.user.env  ontolith-server.service  ontolith.env  ontolith.user.env
deployments/systemd-user/: ontolith-management-server.service  ontolith-server.service
docs/: DEPENDENCY_REGISTER.md  L0-ontolith-core-Knowledge-Object-Foundation.md  L1-ontolith-rdf-Statement-Graph-Dataset.md  L2-ontolith-storage-transaction-kernel.md  L3-ontolith-parser-query.md  L4-ontolith-cluster-consistency.md  L5-management-platform-slo.md  L5-ontolith-access-security.md  L5-systemd-service.md  Ontolith Software Architecture Specification  Volume 04.md  Ontolith_Architecture_Handbook_Table_of_Contents.md  Ontolith_Development_Plan.md  Ontolith_Development_Plan.zh-CN.md  Ontolith_Software_Architecture_Specification.md  PROGRESS.md  R1-sparql-smoke-compliance.md  SAS-0401 — Knowledge Object Model.md
rfc/: 0000-template.md
scripts/: check-management-slo-window.sh  ci-local.sh  install-ontolith-management-system-service.sh  install-ontolith-management-user-service.sh  install-ontolith-service.sh  install-ontolith-system-service.sh  install-ontolith-user-service.sh
(+41 files in other folders)
