[package]
name = "ontolith-observability"
version = "0.1.0"
edition = "2024"

[dependencies]
ontolith-core = { path = "../ontolith-core" }
ontolith-storage = { path = "../ontolith-storage" }
ontolith-transaction = { path = "../ontolith-transaction" }

[dev-dependencies]
ontolith-rdf = { path = "../ontolith-rdf" }
